temp/unpackaged/objects/POC_Team_Member__c.object
<CustomObject>
    <fields>
        <fullName>EMAIL_POC1__c</fullName>
        <label>EMAIL POC1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EMAIL_POC2__c</fullName>
        <label>EMAIL POC2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EMAIL_POC3__c</fullName>
        <label>EMAIL POC3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name_POC1__c</fullName>
        <label>Name POC1</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_POC2__c</fullName>
        <label>Name POC2</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_Team__c</fullName>
        <label>POC Team</label>
        <referenceTo>POC_Team__c</referenceTo>
        <relationshipLabel>POC Team Members</relationshipLabel>
        <relationshipName>POC_Team_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone_POC1__c</fullName>
        <label>Phone POC1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_POC2__c</fullName>
        <label>Phone POC2</label>
        <type>Phone</type>
    </fields>
    <label>POC Team Member</label>
    <nameField>
        <label>POC Team Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POC Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>